Fix bug with overflow text in form success-alert

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ div.footer-contact {
 /* Form snippet only */
 #success-alert {
   margin: auto;
+  overflow-wrap: break-word;
 }
 
 #example-form {
